src/backend/vm/snapshots/shlang__backend__vm__tests__Block Return.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (_test_func! ({ if true {10} }))"
---
Ok(
    [
        Int(
            10,
        ),
    ],
)
