src/backend/vm/snapshots/shlang__backend__vm__tests__Block Returns Null.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (_test_func! ({ if true {10;} }))"
---
Ok(
    [
        Null,
    ],
)
