src/backend/vm/snapshots/shlang__backend__vm__tests__Complex logical expr.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"(true or false) and (not false)\")"
---
Ok(
    [
        (
            Bool(
                true,
            ),
            5,
        ),
    ],
)
