src/backend/vm/snapshots/shlang__backend__vm__tests__Complex precedence.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (_test_func! (\"-(5 + 2) * 3\"))"
---
Ok(
    [
        Int(
            -21,
        ),
    ],
)
