src/backend/vm/snapshots/shlang__backend__vm__tests__Division float.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"5.0 / 2.0\")"
---
Ok(
    [
        (
            Float(
                2.5,
            ),
            2,
        ),
    ],
)
