src/backend/vm/snapshots/shlang__backend__vm__tests__Division int.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (_test_func! (\"10 / 3\"))"
---
Ok(
    [
        Int(
            3,
        ),
    ],
)
