src/backend/vm/snapshots/shlang__backend__vm__tests__Eq.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"1.0/2.0 == 0.5\")"
---
Ok(
    [
        (
            Bool(
                true,
            ),
            4,
        ),
    ],
)
