src/backend/vm/snapshots/shlang__backend__vm__tests__Equality bool.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (_test_func! (\"true == true\"))"
---
Ok(
    [
        Bool(
            true,
        ),
    ],
)
