src/backend/vm/snapshots/shlang__backend__vm__tests__Equality float.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (_test_func! (\"3.14 == 3.14\"))"
---
Ok(
    [
        Bool(
            true,
        ),
    ],
)
