src/backend/vm/snapshots/shlang__backend__vm__tests__Equality int.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"42 == 42\")"
---
Ok(
    [
        (
            Bool(
                true,
            ),
            2,
        ),
    ],
)
